@@ -2,6 +2,8 @@
   * Included Java source codes for the Jruby extension made by Daniel Luz
     <dev@mernen.com>.
   * Output full exception message of deep_const_get to aid debugging.
+  * Fixed an issue with ruby 1.9 Module#const_defined? method, that was
+    reported by Riley Goodside.
 2010-08-09 (1.4.6)
   * Fixed oversight reported in http://github.com/flori/json/issues/closed#issue/23,
     always create a new object from the state prototype.
